--- a/BlazorAppToDo/Components/Pages/ToDo/Edit.razor
+++ b/BlazorAppToDo/Components/Pages/ToDo/Edit.razor
@@ -17,6 +17,12 @@ else
             <EditForm method="post" Model="EditTodoDB" OnValidSubmit="UpdateTodo" FormName="update" Enhance>
                 <DataAnnotationsValidator />
                 <ValidationSummary class="text-danger" />
+
+                <div class="mb-3" style="display:none;">
+                    <label for="Id" class="form-label">ID</label>
+                    <InputNumber  id="Id" @bind-Value="EditTodoDB.Id" class="form-control" />
+                    <ValidationMessage For="()=>EditTodoDB.Id" class="text-danger" />
+                </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <InputText id="title" @bind-Value="EditTodoDB.Title" class="form-control" />
